[gd_scene load_steps=4 format=3 uid="uid://c5aqawlwxtlhk"]

[ext_resource type="Script" path="res://scenes/enemy/spawn.gd" id="1_gnsf0"]
[ext_resource type="PackedScene" uid="uid://bn1ar05oul7hp" path="res://scenes/enemy/enemy.tscn" id="2_c6en4"]

[sub_resource type="Curve2D" id="Curve2D_uj2fl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="spawn" type="Node2D"]
script = ExtResource("1_gnsf0")
enemy_scene = ExtResource("2_c6en4")

[node name="enemy_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="score_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="enemy_path" type="Path2D" parent="."]
curve = SubResource("Curve2D_uj2fl")

[node name="enemy_spawn_location" type="PathFollow2D" parent="enemy_path"]

[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
